--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,6 +8,7 @@
             <form action="/admin/login" method="post" id="login">
                 <input type="text" name="username" placeholder="username">
                 <input type="password" name="password" placeholder="password">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <input type="submit" value="Login">
             </form>
         </div>
